app/assets/stylesheets/view_stylesheets/notes.css.scss
// Place all the styles related to the Notes controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

$comments-sidebar-width: 300px;
$highlight-color: #27F;

#note-main {
  position: fixed;
  top: 0;
  bottom: 0;
  margin-right: $comments-sidebar-width;
  padding-left: 20px;
  padding-right: 50px;
  overflow-y: auto;
  z-index: 100000;

  &.new-comment-showing {
    margin-right: 0;
  }

  .note-description {
    font-size: 2em;
  }
  .note-images {
    margin-top: 40px;
  }
  .image-container {
    display: inline-block;
    border: solid 1px #aaa;
    margin: 15px 0;
  }
}

#new-comment-container {
  position: fixed;
  width: $comments-sidebar-width;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: rgba(0,0,0,0.8);
  z-index: 10;
  display: none;
}

#new-comment-header-container {
  background-color: #34495E;
  color: white;
  padding: 5px 10px;
  z-index: 100000;
  display: none;
  position: fixed;
  right: 0;
  top: 0;
  height: 35px;
  width: $comments-sidebar-width - 20px;
  text-align: center;
  box-shadow: #000 2px 0px 2px;

  .new-comment-cancel {
    float: left;
    font-size: 1.5em;
    padding-bottom: 10px;
    -webkit-user-select: none;
  }

  h3 {
    font-size: 1.5em;
    line-height: 1.4;
    margin-right: 35px;
  }
}

#new-comment-panel {
  position: absolute;
  display: none;
  width: $comments-sidebar-width - 20px;
  -webkit-transition: top 0.2s ease;
  top: 50px;
  right: 5px;
  background-color: #fffff2;
  border-radius: 8px;
  border: 4px solid $highlight-color;
  z-index: 100;

  #newcomment {
    width: 262px;
    height: 200px;
    resize: none;
    border: none;
    border-bottom: 1px solid #aaa;
    border-radius: 8px 8px 0 0;
    margin: 0;
  }

  .btn {
    display: inline-block;
    margin: 6px 5px;
  }

}

#new-comment-position-line {
  position: absolute;
  display: none;
  bottom: 38px;
  left: -54px;
  width: 50px;
  height: 4px;
  background-color: $highlight-color;

  .left-arrow {
    position: relative;
    top: -8px;
    left: -10px;
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-right:10px solid $highlight-color;
  }
}

.comments-sidebar {
  background-color: #34495E;
  width: $comments-sidebar-width - 20px; // Subtract padding
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  overflow-y: auto;
  padding: 10px;
  box-shadow: -2px 0 2px #bbc;
  z-index: 100;

  #comments-container {

  }
}

.comment {
  margin: 10px 0px;
  border-radius: 10px;
  padding: 4px; // Effectively the 'active' border width
  background-color: #304050;

  -webkit-transition: background-color 0.3s ease;
  -moz-transition: background-color 0.3s ease;
  -ms-transition: background-color 0.3s ease;
  transition: background-color 0.3s ease;
  
  .comment-inner {
    border-radius: 6px;
    padding: 5px 8px;
    background-color: white;
  }

  &.active {
    background-color: $highlight-color;
  }

  .user {
    font-weight: bold;
    margin-bottom: 3px;
  }
  .comment-text {
    color: #222;
  }
  .bottom {
    margin-top: 4px;
  }
  .comment-date {
    color: #aaa;
    float: left;
  }
  .delete-button {
    float: right;
    color: #34495E;
    font-weight: normal;
  }
  .delete-confirm-panel {
    display: none;
    background-color: #bbb;
    border-top: 1px solid #999;
    margin: 10px -8px -5px;
    border-radius: 0 0 5px 5px;

    .btn {
      margin: 5px 0 5px 10px;
    }
  }
}

.create-new-note {
  margin-bottom: 20px;

  .btn.btn-large i {
    margin-right: 5px;
    margin-top: 3px;
  }
}

.circular {
  width: 300px;
  height: 300px;
  border-radius: 150px;
  -webkit-border-radius: 150px;
  -moz-border-radius: 150px;
}

.profile_info {
  font-size: 30px;
  margin-left: 30px;
  margin-bottom: 15px;
  color: grey;
}

.notes-list-container {
  border-radius: 8px;
  overflow: hidden;

  .notes-list {
    .notes-list-item {
      overflow: auto;
      padding: 10px 10px;

      &:nth-child(odd) {
        background-color: #f2f2f2;
      }
      &:nth-child(even) {
        background-color: #fafafa;
      }

      .text-link {
        float: left;
        font-size: 1.4em;
      }

      .btn {
        float: right;
        margin-left: 10px;
      }
    }
  }
}

#note-upload-form {
  margin-top: 20px;

  label {
    cursor: default;
  }

  .text-field {
    margin-bottom: 20px;
    input {
      width: 500px;
    }
  }

  .file-picker {
    margin-bottom: 20px;
  }

  #upload-label {
    -webkit-transition: color 0.1s;
    &.error {
      color: red;
    }
  }
}

